updated app and added whitelist lookups

--- a/default/macros.conf
+++ b/default/macros.conf
@@ -1,110 +1,3 @@
 [sysmon]
-definition = `OPORD` source=wineventlog:microsoft-windows-sysmon/operational
-
-[suricata]
-definition = `OPORD` sourcetype="suricata"
+definition = index=* sourcetype="XmlWinEventLog:Microsoft-Windows-Sysmon/Operational"
 iseval = 0
-
-[annotatations1]
-definition = | inputlookup annotations1.csv
-iseval = 0
-
-[event_sources]
-definition = `OPORD` (source=wineventlog:application OR source=wineventlog:system OR source=wineventlog:security)
-iseval = 0
-
-[mitre_attack_framework]
-definition = |inputlookup mitre_attack_framework.csv
-iseval = 0
-
-[requirements]
-definition = | inputlookup requirements.csv
-iseval = 0
-
-[OPORD]
-definition = index=botsv2
-iseval = 0
-
-[mitre_attack_framework_rules]
-definition = `mitre_attack_framework_rules_from_alerts`
-iseval = 0
-
-[mitre_attack_framework_rules_from_alerts]
-definition = | `all_alerts` \
-| eval rule_name=alert
-iseval = 0
-
-[powershell]
-definition = `OPORD` source=wineventlog:microsoft-windows-powershell/operational
-iseval = 0
-
-[network_traffic]
-definition = index=zeek sourcetype="bro:*"
-iseval = 0
-
-[host_jarvis_summary]
-definition = index=host_jarvis_summary
-iseval = 0
-
-[network_jarvis_summary]
-definition = index=network_jarvis_summary
-iseval = 0
-
-[indextime]
-definition = _index_earliest=1 AND _index_latest=now
-
-[zeek_fat]
-definition = index=zeek_conn OR index=zeek_dce_rpc OR index=zeek_dhcp OR index=zeek_diagnostics OR index=zeek_dnp3 OR index=zeek_dns OR index=zeek_dpd OR index=zeek_files OR index=zeek_ftp OR index=zeek_http OR index=zeek_intel OR index=zeek_irc OR index=zeek_kerberos OR index=zeek_known_certs OR index=zeek_known_hosts OR index=zeek_known_modbus OR index=zeek_known_services OR index=zeek_modbus OR index=zeek_mysql OR index=zeek_netcontrol OR index=zeek_notice_alarm OR index=zeek_notices OR index=zeek_ntlm OR index=zeek_ntp OR index=zeek_ocsp OR index=zeek_openflow OR index=zeek_pe OR index=zeek_radius OR index=zeek_rdp OR index=zeek_rfb OR index=zeek_signatures OR index=zeek_sip OR index=zeek_smb OR index=zeek_smtp OR index=zeek_snmp OR index=zeek_socks OR index=zeek_software OR index=zeek_ssh OR index=zeek_ssl OR index=zeek_syslog OR index=zeek_traceroute OR index=zeek_tunnel OR index=zeek_weird OR index=zeek_weird_stats OR index=zeek_x509
-iseval = 0
-
-[zeek_skinny]
-definition = index=zeek_conn OR index=zeek_ssl OR index=zeek_dns OR index=zeek_http
-iseval = 0
-
-[windows-app]
-definition = `OPORD` source=wineventlog:application
-
-[windows]
-definition = `OPORD`source="WinEventLog:System" OR source="WinEventLog:Security"
-
-[windows-security]
-definition = `OPORD` source=wineventlog:security
-
-[windows-system]
-definition = `OPORD` source=wineventlog:system
-
-[windows-wmi]
-definition = `OPORD` source="WinEventLog:Microsoft-Windows-WMI-Activity/Operational"
-
-[dns_whitelist]
-definition = lookup dns_whitelist mitre_technique_id host_fqdn process_path query_name output reason | where isnull(reason)
-
-[file_access_whitelist]
-definition = lookup file_access_whitelist mitre_technique_id host_fqdn process_path file_path output reason | where isnull(reason)
-
-[file_create_whitelist]
-definition = lookup file_create_whitelist mitre_technique_id host_fqdn process_path file_path file_name output reason | where isnull(reason)
-
-[image_load_whitelist]
-definition = lookup image_load_whitelist mitre_technique_id host_fqdn process_path driver_loaded driver_is_signed driver_signature driver_signature_status output reason | where isnull(reason)
-
-[network_whitelist]
-definition = lookup network_whitelist mitre_technique_id host_fqdn user_name dst_ip dst_port src_ip process_path output reason | where isnull(reason)
-
-[pipe_whitelist]
-definition = lookup pipe_whitelist mitre_technique_id host_fqdn process_path pipe_name output reason | where isnull(reason)
-
-[process_access_whitelist]
-definition = lookup process_access_whitelist mitre_technique_id host_fqdn process_path target_process_path process_granted_access output reason | where isnull(reason)
-
-[process_create_whitelist]
-definition = lookup process_create_whitelist mitre_technique_id host_fqdn user_name process_path process_parent_path process_command_line output reason | where isnull(reason)
-
-[registry_whitelist]
-definition = lookup registry_whitelist mitre_technique_id host_fqdn event_type process_path registry_key_path output reason | where isnull(reason)
-
-[remote_thread_whitelist]
-definition = lookup remote_thread_whitelist mitre_technique_id host_fqdn process_name target_process_path target_process_address output reason | where isnull(reason)
-
-[wmi_whitelist]
-definition = lookup wmi_whitelist mitre_technique_id host_fqdn user_name wmi_consumer_name wmi_consumer_destination output reason | where isnull(reason)
