--- a/local/datamodels.conf
+++ b/local/datamodels.conf
@@ -1,2 +1,29 @@
+[Arc_Event_Signatures]
+acceleration.cron_schedule = 4-59/5 * * * *
+acceleration.earliest_time = -1mon
+acceleration.hunk.dfs_block_size = 0
+acceleration.manual_rebuilds = true
+acceleration.max_concurrent = 1
+acceleration.schedule_priority = highest
+
+[Powershell]
+acceleration.hunk.dfs_block_size = 0
+
+[alertsignature]
+acceleration.hunk.dfs_block_size = 0
+
 [Network_Data]
-acceleration = false
+acceleration.cron_schedule = 1-56/5 * * * *
+acceleration.earliest_time = 0
+acceleration.hunk.dfs_block_size = 0
+acceleration.manual_rebuilds = true
+acceleration.schedule_priority = highest
+tags_whitelist = pci
+
+[Sysmon]
+acceleration.earliest_time = 0
+acceleration.hunk.dfs_block_size = 0
+
+[windows_events]
+acceleration.earliest_time = 0
+acceleration.hunk.dfs_block_size = 0
