--- a/local/savedsearches.conf
+++ b/local/savedsearches.conf
@@ -1,4 +1,191 @@
-[[T0000] Named Pipes]
+[Logon type 4 Batch Logon]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = 0
+dispatchAs = user
+display.events.fields = ["host","source","sourcetype","alert.signature","alert.severity","src_ip","src_port","dest_ip","dest_port","alert.category","Account_Domain","Account_Name","Authentication_Package","ComputerName","Creator_Process_Name","Logon_Process","Logon_Type","Privileges","Process_Command_Line","Process_Name","Security_ID","dest","dest_nt_domain","dest_nt_host","event_id","member_dn","member_id","member_nt_domain","name","privilege","privilege_id","process_name","signature","src","src_user","user","body","category"]
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.charting.chart = bar
+display.visualizations.show = 0
+request.ui_dispatch_app = Arc_reactor_app
+request.ui_dispatch_view = search
+search = |tstats count from datamodel=event_id.wineventlog_security where wineventlog_security.Logon_Type=4 by wineventlog_security.Account_Name | sort - count
+
+[Logon type 5 windows service logon]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = 0
+dispatchAs = user
+display.events.fields = ["host","source","sourcetype","alert.signature","alert.severity","src_ip","src_port","dest_ip","dest_port","alert.category","Account_Domain","Account_Name","Authentication_Package","ComputerName","Creator_Process_Name","Logon_Process","Logon_Type","Privileges","Process_Command_Line","Process_Name","Security_ID","dest","dest_nt_domain","dest_nt_host","event_id","member_dn","member_id","member_nt_domain","name","privilege","privilege_id","process_name","signature","src","src_user","user","body","category"]
+display.general.type = statistics
+display.page.search.mode = verbose
+display.page.search.tab = statistics
+display.visualizations.charting.chart = bar
+display.visualizations.show = 0
+request.ui_dispatch_app = Arc_reactor_app
+request.ui_dispatch_view = search
+search = |tstats count from datamodel=event_id.wineventlog_security where wineventlog_security.Logon_Type=5 by wineventlog_security.Account_Name | sort + count
+
+[Event_ID_4624_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = (Login Success)
+dispatch.earliest_time = 0
 enableSched = 1
+schedule_priority = higher
+schedule_window = 60
+search = `wineventlog-security`	EventCode=4624	NOT	(host="DC1"	OR	host="DC2"	OR	\
+host="DC…")	NOT	(Account_Name="*$"	OR	Account_Name="ANONYMOUS	LOGON")	NOT	\
+(Account_Name="Service_Account")	|	eval Account_Domain=(mvindex(Account_Domain,1))	|	\
+eval Account_Name=if(Account_Name="-",(mvindex(Account_Name,1)),	Account_Name)	|	\
+eval Account_Name=if(Account_Name="*$",(mvindex(Account_Name,1)),	Account_Name)	|	\
+eval	_time=strpTime(_Ome,"%Y/%m/%d	%T")	|	stats	count	values(Account_Domain)	AS	\
+Domain,	values(host)	AS	Host,	dc(host)	AS	Host_Count,	values(Logon_Type)	AS	Logon_Type,	\
+values(WorkstaOon_Name)	AS	WS_Name,	values(Source_Network_Address)	AS	Source_IP,	\
+values(Process_Name)	AS	Process_Name	by	Account_Name	|	where	Host_Count	>	2
+
+[Event_ID_4663_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = ( File/Reg Auditing)
+enableSched = 1
+schedule_window = 15
+search = `wineventlog-security` EventCode=4663	NOT	(Process_Name="*\\
+\Windows\\servicing\\TrustedInstaller.exe"	OR	"*\\Windows\\System32\\poqexec.exe")	NOT	\
+(Object_Name="*\\Users\\svc_acct\\pnp"	OR	Object_Name="C:\\Users\\Surf\\AppData\\
+\Local\\Google\\Chrome\\User Data*"	NOT	Object_Name="C:\\Users\\Surf\\AppData\\
+\Roaming\\MicrosoW\\Windows\\Recent\\CustomDesOnaOons")	NOT	(Object_Name="C:\\
+\Windows\\System32\\LogFiles\\*"	OR	Object_Name="*ProgramData\\MicrosoW\\RAC\\*"	\
+OR	Object_Name="*\\MicrosoW\\Windows\\Explorer\\thumbcache*"	OR	\
+Object_Name="*.MAP"	OR	Object_Name="*counters.dat"	OR	Object_Name="*\\Windows\\
+\Gatherlogs\\SystemIndex\\*")	|	rename Process_Name	as Created_By |	table _Ome,	host,	\
+Security_ID, Handle_ID,	Object_Type, Object_Name, Process_ID, Created_By, Accesses
+
+[Event_ID_4688_exe_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = New processes started with suspicious exe files
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = auto
+search = `wineventlog-security`	(EventCode=4688) NOT (Account_Name=*$) (at.exe OR bcdedit.exe	OR chcp.exe	OR cmd.exe OR cscript.exe OR ipconfig.exe OR mimikatz.exe OR	nbtstat.exe	OR nc.exe OR netcat.exe	OR netstat.exe OR nmap OR nslookup.exe OR	bcp.exe	OR sqlcmd.exe OR OSQL.exe OR ping.exe OR	powershell.exe OR powercat.ps1 OR psexec.exe OR psexecsvc.exe OR psLoggedOn.exe OR procdump.exe OR rar.exe OR reg.exe OR route.exe OR runas.exe OR sc.exe OR schtasks.exe OR sethc.exe OR ssh.exe OR sysprep.exe OR systeminfo.exe OR system32\\net.exe	OR tracert.exe OR vssadmin.exe OR whoami.exe OR winrar.exe OR wscript.exe OR winrm.* OR winrs.* OR wmic.exe	OR wsmprovhost.exe) | eval Message=split(Message,".") | eval Short_Message=mvindex(Message,0)	| table	_Ome, host,	Account_Name, Process_Name, Process_ID,	Process_Command_Line, New_Process_Name, New_Process_ID, Creator_Process_ID,	Short_Message
+
+[Event_ID_4688_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = powershell commands
+enableSched = 1
+schedule_priority = highest
+schedule_window = 120
+search = `wineventlog-security`	(EventCode=4688) (powershell* AND -ExecuOonPolicy) OR(powershell* AND bypass) OR	(powershell* AND -noprofile) | eval	Message=split(Message,".") | eval Short_Message=mvindex(Message,0)	| table	_Ome,	host, Account_Name,	Process_Name, Process_ID, Process_Command_Line, New_Process_Name, New_Process_ID, Creator_Process_ID, Short_Message
+
+[Event_ID_5140_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = (Share Accessed) Clone
+enableSched = 1
+schedule_window = 60
+search = `wineventlog-security`	EventCode=5140	(Share_Name="*\\C$"	OR Share_Name="*D$"	OR Share_Name="*E$" OR Share_Name="*F$"	OR Share_Name="*U$") NOT Source_Address="::1" | eval DesOnaOon_Sys1=trim(host,"1") |	eval DesOnaOon_Sys2=trim(host,"2") |	eval Dest_Sys1=lower(DesOnaOon_Sys1) | eval Dest_Sys2=lower(DesOnaOon_Sys2) | rename host AS DesOnaOon	| rename Account_Domain AS Domain | where Account_Name!=Dest_Sys1 | where Account_Name!=Dest_Sys2	| stats	count values(Domain) AS	Domain,	values(Source_Address) AS	Source_IP, values(DesOnaOon) AS	DesOnaOon, dc(DesOnaOon)	AS Dest_Count, values(Share_Name) AS Share_Name, values(Share_Path) AS	Share_Path by Account_Name
+
+[Event_ID_5156_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = (Win FW Connection) changes
+enableSched = 1
+schedule_window = 60
+search = `wineventlog-security` EventCode=5156 NOT (Source_Address="239.255.255.250"	OR	Source_Address="224.0.0.*" OR Source_Address="::1" OR Source_Address="ff02::*" OR Source_Address="fe80::*" OR	Source_Address="255.255.255.255" OR Source_Address=192.168.1.255) NOT (DesOnaOon_Address="127.0.0.1" OR DesOnaOon_Address="239.255.255.250"	OR DesOnaOon_Address="*.*.*.255" OR DesOnaOon_Address="224.0.0.25*") NOT (DesOnaOon_Port="0") NOT(ApplicaOon_Name="\\icamsource\\" OR ApplicaOon_Name="*\\bin\\splunkd.exe")	| dedup DesOnaOon_Address DesOnaOon_Port | table _Ome, host, ApplicaOon_Name, DirecOon, Source_Address, Source_Port,	DesOnaOon_Address, DesOnaOon_Port |	sort DirecOon DesOnaOon_Port
+
+[Event_ID_7045_saved_search]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 13 * * *
+description = (New Service Added)
+enableSched = 1
+schedule_window = 15
+search = `wineventlog-system` EventCode=7045	NOT (Service_Name=tenable_mw_scan) | eval Message=split(Message,".") | eval Short_Message=mvindex(Message,0) | table _Ome host Service_Name,	Service_Type, Service_Start_Type, Service_Account, Short_Message
 
 [tstats zeek conn stats dest_ip]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 17 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.dest_ip \
+| sort - count
+
+[tstats zeek conn stats dest_port]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 11 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.dest_port \
+| sort - count
+
+[tstats zeek conn stats ja3]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 12 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.ja3\
+| sort - count
+
+[tstats zeek conn stats query]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 12 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.query\
+| sort - count
+
+[tstats zeek conn stats src_ip]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 11 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.src_ip \
+| sort - count
+
+[tstats zeek conn stats src_port]
+action.email.useNSSubject = 1
+alert.track = 0
+cron_schedule = 0 11 * * *
+description = Used in zeek conn stats dashboard
+dispatch.earliest_time = 0
+enableSched = 1
+schedule_window = 120
+search = | tstats count from datamodel=Network_Data.All_Traffic by All_Traffic.src_port \
+| sort - count
+
+[Crtitcal Process Clone]
+action.email.useNSSubject = 1
+alert.track = 0
+dispatch.earliest_time = 0
+display.general.type = statistics
+display.page.search.tab = statistics
+display.visualizations.show = 0
+request.ui_dispatch_app = Arc_reactor_app
+request.ui_dispatch_view = search
+search = `sysmon` Image="*\\powershell.exe" OR Image="*\\msbuild.exe" OR Image="*\\psexec.exe" OR Image="*\\at.exe" OR Image="*\\schtasks.exe" OR Image="*\\net.exe" OR Image="*\\vssadmin.exe" OR Image="*\\utilman.exe" OR Image="*\\wmic.exe" OR Image="*\\mshta.exe" OR Image="*\\wscript.exe" OR Image="*\\cscript.exe" OR Image="*\\cmd.exe" OR Image="*\\whoami.exe" OR Image="*\\mmc.exe" OR Image="*\\systeminfo.exe" OR Image="*\\csvde.exe" OR Image="*\\certutil.exe" | stats values(CommandLine) by Image
+workload_pool = undefined
