--- a/local/macros.conf
+++ b/local/macros.conf
@@ -1,9 +1,67 @@
-[zeek]
-definition = index=zeek_conn OR index=zeek_dce_rpc OR index=zeek_dhcp OR index=zeek_diagnostics OR index=zeek_dnp3 OR index=zeek_dns OR index=zeek_dpd OR index=zeek_files OR index=zeek_ftp OR index=zeek_http OR index=zeek_intel OR index=zeek_irc OR index=zeek_kerberos OR index=zeek_known_certs OR index=zeek_known_hosts OR index=zeek_known_modbus OR index=zeek_known_services OR index=zeek_modbus OR index=zeek_mysql OR index=zeek_netcontrol OR index=zeek_notice_alarm OR index=zeek_notices OR index=zeek_ntlm OR index=zeek_ntp OR index=zeek_ocsp OR index=zeek_openflow OR index=zeek_pe OR index=zeek_radius OR index=zeek_rdp OR index=zeek_rfb OR index=zeek_signatures OR index=zeek_sip OR index=zeek_smb OR index=zeek_smtp OR index=zeek_snmp OR index=zeek_socks OR index=zeek_software OR index=zeek_ssh OR index=zeek_ssl OR index=zeek_syslog OR index=zeek_traceroute OR index=zeek_tunnel OR index=zeek_weird OR index=zeek_weird_stats OR index=zeek_x509
+[sysmon]
+definition = `OPORD` source=wineventlog:microsoft-windows-sysmon/operational
+
+[suricata]
+definition = `OPORD` sourcetype="suricata"
 iseval = 0
 
-[zeek_fat]
-disabled = 1
+[wineventlog-application]
+definition = `OPORD` source=wineventlog:application
+iseval = 0
 
-[zeek_skinny]
-disabled = 1
+[wineventlog-security]
+definition = `OPORD` source=wineventlog:security
+iseval = 0
+
+[wineventlog-system]
+definition = `OPORD` source=wineventlog:system
+iseval = 0
+
+[network]
+definition = `OPORD` (sourcetype="stream*" OR sourcetype=unknown-2 OR sourcetype=http-to_small OR sourcetype="bro:*")
+iseval = 0
+
+[annotatations1]
+definition = | inputlookup annotations1.csv
+iseval = 0
+
+[event_sources]
+definition = `OPORD` (source=wineventlog:application OR source=wineventlog:system OR source=wineventlog:security)
+iseval = 0
+
+[mitre_attack_framework]
+definition = |inputlookup mitre_attack_framework.csv
+iseval = 0
+
+[requirements]
+definition = | inputlookup requirements.csv
+iseval = 0
+
+[OPORD]
+definition = index=botsv2
+iseval = 0
+
+[mitre_attack_framework_rules]
+definition = `mitre_attack_framework_rules_from_alerts`
+iseval = 0
+
+[mitre_attack_framework_rules_from_alerts]
+definition = | `all_alerts` \
+| eval rule_name=alert
+iseval = 0
+
+[powershell]
+definition = `OPORD` source=wineventlog:microsoft-windows-powershell/operational
+iseval = 0
+
+[win_event_sources]
+definition = `OPORD` (source=wineventlog:application OR source=wineventlog:system OR source=wineventlog:security)
+iseval = 0
+
+[network_traffic]
+definition = index=zeek sourcetype="bro:*"
+iseval = 0
+
+[jarvis_index]
+definition = index=jarvis
+iseval = 0
